--- a/test/collapsable/index.html
+++ b/test/collapsable/index.html
@@ -33,19 +33,19 @@
                   <tr style="height: 52px;">
                     <th colspan="2"></th>
                     <th>
-                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
                     </th>
                     <th>
-                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
                     </th>
                   </tr>
                   <tr style="height: 91px;">
                     <th colspan="2"></th>
                     <th>
-                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
                     </th>
                     <th>
-                      <a href="#" class="cart-ss-bis"><img src="images/gb_ss.png"></img></a>
+                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
                     </th>
                   </tr>
                 </table>
@@ -73,5 +73,36 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+
+     var dragging;
+
+     $('.cart-ss-bis')
+       .on('dragstart', dragstart)
+       .on('dragend', dragend);
+
+     $('.cart-ram-bis')
+       .on('dragstart', dragstart)
+       .on('dragend', dragend);
+
+     function dragstart(e) {
+       console.log('ds1');
+       /* e.stopPropagation();*/
+       var element = e.target;
+
+       setTimeout(function(){
+         console.log('ds1 - to');
+         element.classList.add('tmp');
+       });
+     }
+
+     function dragend(e) {
+       console.log('de1');
+       var element = e.target;
+
+       element.classList.remove('tmp');
+     }
+
+    </script>
   </body>
 </html>
