--- a/test/collapsable/index.html
+++ b/test/collapsable/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css"> -->
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
@@ -16,7 +17,7 @@
             <button data-toggle="collapse" data-parent="#accordion" href="#collapse1"
                     type="button" class="bg-head-btn btn btn-block collapsed"></button>
             <div id="collapse1" class="panel-collapse collapse">
-              <div class="panel-body">
+              <div class="panel-body ui-widget-content">
                 <table>
                   <tr style="height: 21px;">
                     <th style="width: 31px;"></th>
@@ -27,25 +28,25 @@
                   <tr style="height: 52px;">
                     <th></th>
                     <th colspan="3">
-                      <a href="#" class="cart-ram-bis"><img src="images/gb_ram.png"></img></a>
+                      <img src="images/gb_ram.png" class="cart-ram-bis ui-widget-content" draggable="true"></img>
                     </th>
                   </tr>
                   <tr style="height: 52px;">
                     <th colspan="2"></th>
                     <th>
-                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
+                      <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
                     </th>
                     <th>
-                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
+                      <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
                     </th>
                   </tr>
                   <tr style="height: 91px;">
                     <th colspan="2"></th>
                     <th>
-                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
+                      <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
                     </th>
                     <th>
-                      <img src="images/gb_ss.png" class="cart-ss-bis" draggable="true"></img>
+                      <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
                     </th>
                   </tr>
                 </table>
@@ -71,37 +72,48 @@
         </div>
       </div>
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
 
-     var dragging;
-
-     $('.cart-ss-bis')
-       .on('dragstart', dragstart)
-       .on('dragend', dragend);
-
-     $('.cart-ram-bis')
-       .on('dragstart', dragstart)
-       .on('dragend', dragend);
-
-     function dragstart(e) {
-       console.log('ds1');
-       /* e.stopPropagation();*/
-       var element = e.target;
-
-       setTimeout(function(){
-         console.log('ds1 - to');
-         element.classList.add('tmp');
+     $(".cart-ss-bis")
+       .draggable({
+         helper: "original",
+         revert: true,
+         revertDuration: 50,
+         cursorAt: { left: 44, top: 26 },
+         distance: 20,
+         cursor: "crosshair",
+         scope: "ss",
+         zIndex: "100",
        });
-     }
 
-     function dragend(e) {
-       console.log('de1');
-       var element = e.target;
+     $(".cart-ram-bis")
+       .draggable({
+         helper: "original",
+         revert: true,
+         revertDuration: 50,
+         cursorAt: { left: 92, top: 26 },
+         distance: 20,
+         cursor: "crosshair",
+         scope: "ram",
+         zIndex: "100",
+       });
 
-       element.classList.remove('tmp');
-     }
+     $("#accordion .panel")
+       .draggable({
+         helper: "original",
+         revert: true,
+         revertDuration: 50,
+         cursorAt: { left: 125, bottom: 30 },
+         distance: 75,
+         cursor: "crosshair",
+         scope: "cart",
+         /* appendTo: "body",*/
+         zIndex: "100",
+       });
 
     </script>
   </body>
