--- a/test/collapsable/web/cart_table.html
+++ b/test/collapsable/web/cart_table.html
@@ -16,25 +16,30 @@
         <tr style="height: 52px;">
           <th></th>
           <th colspan="3">
-            <img src="images/gb_ram.png" class="cart-ram-bis ui-widget-content" draggable="true"></img>
+            <div class="cart-ram-socket"></div>
+            <!-- <img src="images/gb_ram.png" class="cart-ram-bis ui-widget-content" draggable="true"></img> -->
           </th>
         </tr>
         <tr style="height: 52px;">
           <th colspan="2"></th>
           <th>
-            <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
+            <div class="cart-ss-socket"></div>
+            <!-- <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img> -->
           </th>
           <th>
-            <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
+            <div class="cart-ss-socket"></div>
+            <!-- <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img> -->
           </th>
         </tr>
         <tr style="height: 91px;">
           <th colspan="2"></th>
           <th>
-            <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
+            <div class="cart-ss-socket"></div>
+            <!-- <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img> -->
           </th>
           <th>
-            <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img>
+            <div class="cart-ss-socket"></div>
+            <!-- <img src="images/gb_ss.png" class="cart-ss-bis ui-widget-content" draggable="true"></img> -->
           </th>
         </tr>
       </table>
