--- a/test/collapsable/web/index.html
+++ b/test/collapsable/web/index.html
@@ -11,9 +11,14 @@
     <div class="container">
       <h2>Accordion Example</h2>
       <p><strong>Note:</strong> The <strong>data-parent</strong> attribute makes sure that all collapsible elements under the specified parent will be closed when one of the collapsible item is shown.</p>
-      <div class="panel-group col-md-3">
+      <div class="panel-group col-md-4">
+        Cart Bank:
         <div id="accordion">
         </div>
+        Detached Chip Bank:
+        <div id="detached-chip-bank">
+        </div>
+
       </div>
     </div>
 
