Minor changes   Dynamic coloring on cart's sockets

--- a/test/collapsable/web/cart_table.html
+++ b/test/collapsable/web/cart_table.html
@@ -3,7 +3,6 @@
           type="button" class="bg-head-btn btn btn-block collapsed"></button>
   <div class="panel-collapse collapse">
     <div class="panel-body">
-
       <table>
         <tr style="height: 21px;">
           <th style="width: 31px;"></th>
@@ -14,25 +13,25 @@
         <tr style="height: 52px;">
           <th></th>
           <th colspan="3">
-            <div class="cart-ram-socket"></div>
+            <div class="cart-ram-socket ui-widget-header"></div>
           </th>
         </tr>
         <tr style="height: 52px;">
           <th colspan="2"></th>
           <th>
-            <div class="cart-ss-socket"></div>
+            <div class="cart-ss-socket ui-widget-header"></div>
           </th>
           <th>
-            <div class="cart-ss-socket"></div>
+            <div class="cart-ss-socket ui-widget-header"></div>
           </th>
         </tr>
         <tr style="height: 91px;">
           <th colspan="2"></th>
           <th>
-            <div class="cart-ss-socket"></div>
+            <div class="cart-ss-socket ui-widget-header"></div>
           </th>
           <th>
-            <div class="cart-ss-socket"></div>
+            <div class="cart-ss-socket ui-widget-header"></div>
           </th>
         </tr>
       </table>
