Minor changes   improve css

--- a/web/index.html
+++ b/web/index.html
@@ -75,18 +75,7 @@
               </div>
             </div>
             <div class="col-sm-3" id="mainAlertBox">
-              <!-- <div class="alert alert-danger">
-                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                   <strong>Crash:</strong> <span>_AssertionError {_message: "_onEjectReq with no gameboy", $thrownJsError: Error: Assertion failed: "_onEjectReq with no gameboy"</span>
-                   </div>
-                   <div class="alert alert-warning">
-                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                   <strong>Error:</strong> <span>Ram 'yomama.save' is not compatible with rom 'pokemon.gb'</span>
-                   </div>
-                   <div class="alert alert-danger">
-                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                   <strong>type</strong> <span>text</span> -->
-              </div>
+            </div>
             </div>
           </div>
         </div>
@@ -105,8 +94,7 @@
 
             <div class="col-sm-12">
               <button class="btn btn-primary" type="button" id="debButtonToggle">
-                <h3>
-                  Debugger
+                <h3>Debugger
                   <span id="debStatusOn" class="label label-success">On</span>
                   <span  id="debStatusOff" class="label label-danger" style="display: none;">Off</span>
                 </h3>
@@ -148,6 +136,9 @@
     </div><!-- /MAIN CONTAINER -->
     <!-- FOOTER -->
     <footer class="footer">
+      <small class="col-sm-2">
+        <a href="http://blueamnesiac.deviantart.com/">artworks</a>
+      </small>
       <small class="pull-right col-sm-2">
         <a href="https://github.com/jsaglio42">jsaglio</a>, <a href="https://github.com/Ngoguey42">ngoguey</a>
       </small>
