Major changes   Carts+Chips drag/drop fully functional

--- a/test/collapsable/web/cart_table.html
+++ b/test/collapsable/web/cart_table.html
@@ -1,4 +1,4 @@
-<div class="panel">
+<div class="panel ui-widget-header gameboy-cartridge">
   <button data-toggle="collapse" data-parent="#accordion"
           type="button" class="bg-head-btn btn btn-block collapsed"></button>
   <div class="panel-collapse collapse">
