--- a/test/collapsable/web/index.html
+++ b/test/collapsable/web/index.html
@@ -12,8 +12,10 @@
       <h2>Accordion Example</h2>
       <p><strong>Note:</strong> The <strong>data-parent</strong> attribute makes sure that all collapsible elements under the specified parent will be closed when one of the collapsible item is shown.</p>
       <div class="panel-group col-md-4">
+        GameBoy Slot:
+        <div id="gb-slot" class="ui-widget-header"></div>
         Cart Bank:
-        <div id="accordion"></div>
+        <div id="accordion" class="ui-widget-header"></div>
         Detached Chip Bank:
         <div id="detached-chip-bank" class="ui-widget-header"></div>
 
