Work on instructions and Instruction flow

--- a/web/debugger/instruction_flow.html
+++ b/web/debugger/instruction_flow.html
@@ -9,13 +9,13 @@
       <th>Data</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="debTbodyInstFlow">
     <tr><td id="instr0">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr1">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr2">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr3">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr4">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
     <tr><td id="instr5">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr§">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
+    <tr><td id="instr6">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
   </tbody>
 </table>
