Instruction flow if now linked to debugger, need to check if instructions are properly read

--- a/web/debugger/mem_explorer.html
+++ b/web/debugger/mem_explorer.html
@@ -5,23 +5,23 @@
   </caption>
   <thead>
     <tr>
-      <th>Addr</th>
-      <th>x0</th>
-      <th>x1</th>
-      <th>x2</th>
-      <th>x3</th>
-      <th>x4</th>
-      <th>x5</th>
-      <th>x6</th>
-      <th>x7</th>
-      <th>x8</th>
-      <th>x9</th>
-      <th>xA</th>
-      <th>xB</th>
-      <th>xC</th>
-      <th>xD</th>
-      <th>xE</th>
-      <th>xF</th>
+      <th style='text-align: center'>Addr</th>
+      <th style='text-align: center'>x0</th>
+      <th style='text-align: center'>x1</th>
+      <th style='text-align: center'>x2</th>
+      <th style='text-align: center'>x3</th>
+      <th style='text-align: center'>x4</th>
+      <th style='text-align: center'>x5</th>
+      <th style='text-align: center'>x6</th>
+      <th style='text-align: center'>x7</th>
+      <th style='text-align: center'>x8</th>
+      <th style='text-align: center'>x9</th>
+      <th style='text-align: center'>xA</th>
+      <th style='text-align: center'>xB</th>
+      <th style='text-align: center'>xC</th>
+      <th style='text-align: center'>xD</th>
+      <th style='text-align: center'>xE</th>
+      <th style='text-align: center'>xF</th>
     </tr>
   </thead>
   <tbody id="debTbodyMemExplorer">
