--- a/web/debugger/mem_registers.html
+++ b/web/debugger/mem_registers.html
@@ -6,8 +6,8 @@
     <table class="table table-bordered table-striped table-condensed">
      <thead>
         <tr>
-          <th>Name</th>
-          <th>Val</th>
+          <th style='text-align: center'>Name</th>
+          <th style='text-align: center'>Val</th>
         </tr>
       </thead>
       <tbody id="debTbody0MemRegisters">
@@ -86,8 +86,8 @@
     <table class="table table-bordered table-striped table-condensed">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Val</th>
+          <th style='text-align: center'>Name</th>
+          <th style='text-align: center'>Val</th>
         </tr>
       </thead>
       <tbody id="debTbody1MemRegisters">
