--- a/web/debugger/registers.html
+++ b/web/debugger/registers.html
@@ -4,8 +4,8 @@
   </caption>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Value</th>
+      <th style='text-align: center'>Name</th>
+      <th style='text-align: center'>Value</th>
     </tr>
   </thead>
   <tbody>
