--- a/web/debugger/instruction_flow.html
+++ b/web/debugger/instruction_flow.html
@@ -4,18 +4,19 @@
   </caption>
   <thead>
     <tr>
-      <th>Address</th>
-      <th>Instruction</th>
-      <th>Data</th>
+      <th style='text-align: center'>Address</th>
+      <th style='text-align: center'>OpCode</th>
+      <th style='text-align: center'>Data</th>
+      <th style='text-align: center'>Instruction Info</th>
     </tr>
   </thead>
   <tbody id="debTbodyInstFlow">
-    <tr><td id="instr0">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr1">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr2">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr3">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr4">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr5">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
-    <tr><td id="instr6">FFFF</td><td>LD (0xFF00+n), A</td><td>E0 D1</td></tr>
+    <tr><td id="instr0">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr><td id="instr1">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr><td id="instr2">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr><td id="instr3">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr><td id="instr4">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr><td id="instr5">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr><td id="instr6">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
   </tbody>
 </table>
