Minor changes on AutoBreak   Remove clock from enum

--- a/web/index.html
+++ b/web/index.html
@@ -111,11 +111,10 @@
                   <button type="button" class="btn btn-warning debStatusButton">Pause</button>
                   <b>Auto-break:</b>
                   <form>
-                    <label class="radio-inline"><input type="radio" name="optradio" value='0'>Clock</label>
-                    <label class="radio-inline"><input type="radio" name="optradio" value='1'>Instruction</label>
-                    <label class="radio-inline"><input type="radio" name="optradio" value='2'>Frame</label>
-                    <label class="radio-inline"><input type="radio" name="optradio" value='3'>Second</label>
-                    <label class="radio-inline"><input type="radio" name="optradio" value='4' checked>None</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='0' checked>Instruction</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='1'>Frame</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='2'>Second</label>
+                    <label class="radio-inline"><input type="radio" name="optradio" value='3'>None</label>
                   </form>
                 </div>
 
