keyboardSplit, start canvas

--- a/web/index.html
+++ b/web/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-sm-6" >
               <div style="width: 500px; height: 500px;">
-                canvas
+                <canvas id="gameboyScreen" width="160" height="140" style="border:3px;"></canvas>
               </div>
             </div>
             <div class="col-sm-3" id="mainAlertBox">
