Canvas is now working
There is two Canvas Element:
- unscaledScreen: receive the data directly from the gameboy via list 160 * 140
- screen: the unscaledScreen is scaled to fit screen (allow x2 x3 for example)

--- a/web/index.html
+++ b/web/index.html
@@ -70,9 +70,7 @@
               left
             </div>
             <div class="col-sm-6" >
-              <div style="width: 500px; height: 500px;">
-                <canvas id="gameboyScreen" width="160px" height="140px" style="background: #FFFFFF;" />
-              </div>
+                <canvas id="gameboyScreen" />
             </div>
             <div class="col-sm-3" id="mainAlertBox">
             </div>
