Added plast instruction in Debuger/Instruction flow

--- a/web/debugger/instruction_flow.html
+++ b/web/debugger/instruction_flow.html
@@ -12,7 +12,7 @@
   </thead>
   <tbody id="debTbodyInstFlow">
     <tr><td id="instr0">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
-    <tr><td id="instr1">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
+    <tr style="border: solid 3px #000000";><td id="instr1">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
     <tr><td id="instr2">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
     <tr><td id="instr3">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
     <tr><td id="instr4">addr</td><td>opcode</td><td>data</td><td>info</td></tr>
