--- a/test/mixin_components/web/index.html
+++ b/test/mixin_components/web/index.html
@@ -13,11 +13,11 @@
       <p><strong>Note:</strong> The <strong>data-parent</strong> attribute makes sure that all collapsible elements under the specified parent will be closed when one of the collapsible item is shown.</p>
       <div class="panel-group col-md-4">
         GameBoy Slot:
-        <div id="gb-slot" class="ui-widget-header"></div>
+        <div id="gb-slot" class="ui-widget-header toplevel-bank"></div>
         Cart Bank:
-        <div id="accordion" class="ui-widget-header"></div>
+        <div id="accordion" class="ui-widget-header toplevel-bank"></div>
         Detached Chip Bank:
-        <div id="detached-chip-bank" class="ui-widget-header"></div>
+        <div id="detached-chip-bank" class="ui-widget-header toplevel-bank"></div>
 
       </div>
     </div>
