--- a/web/index.html
+++ b/web/index.html
@@ -58,23 +58,23 @@
               <label class="btn btn-info">
                 (re)start<input id="magbut" style="display: none;">
               </label>
+              <label class="btn btn-danger">
+                eject (debug)<input id="ejectbut" style="display: none;">
+              </label>
+              <label class="btn btn-danger">
+                crash (debug)<input id="crashbut" style="display: none;">
+              </label>
               <span id="mainSpeedText">0.00x</span>
               <div id="mainSpeedSlider"></div>
             </div>
-            <div class="" id="mainBottomPanel"></div>
-            <div class="col-sm-12">
-              <div class="row">
-                <label class="btn btn-info btn-file">
-                  Pick ROM (debug)<input id="inBut" type="file" style="display: none;">
-                </label>
-                <label class="btn btn-danger">
-                  eject (debug)<input id="ejectbut" style="display: none;">
-                </label>
-                <label class="btn btn-danger">
-                  crash (debug)<input id="crashbut" style="display: none;">
-                </label>
-              </div>
-            </div>
+            <!-- <div class="" id="mainBottomPanel"></div> -->
+            <!-- <div class="col-sm-12">
+                 <div class="row">
+                 <label class="btn btn-info btn-file">
+                 Pick ROM (debug)<input id="inBut" type="file" style="display: none;">
+                 </label>
+                 </div>
+                 </div> -->
           </div> <!-- /OPTIONS BODY -->
         </div> <!-- /OPTIONS CONTAINER -->
 
