Minor changes   Show name on cartridge header   Add `div` with class `text` in Cart's button, and add getter in `HtmlElementCart`   Rename `*cartBody*` events to `*cartSystem*`   Add `bool cartSystemHovered` && `bool fileDragged` attributes to `pdcs`   Add `String fileName` getter to `LsEntry` from its own `Map _data`

--- a/web/cart_table.html
+++ b/web/cart_table.html
@@ -1,6 +1,8 @@
 <div class="panel ui-widget-header gameboy-cartridge">
   <button data-toggle="collapse" data-parent="#accordion"
-          type="button" class="bg-head-btn btn btn-block collapsed"></button>
+          type="button" class="bg-head-btn btn btn-block collapsed">
+    <div class="text"></div>
+  </button>
   <div class="panel-collapse collapse">
     <div class="panel-body">
       <table>
