--- a/web/index.html
+++ b/web/index.html
@@ -109,6 +109,9 @@
             <label class="btn btn-danger" id="label-ejectbut" style="visibility: hidden;">
               eject<input id="ejectbut" style="display: none;">
             </label>
+            <label class="btn btn-info" id="label-extractrambut" style="visibility: hidden;">
+              extract RAM<input id="extractrambut" style="display: none;">
+            </label>
             <div id="gb-slot" class="ui-widget-header toplevel-bank"></div>
             <!-- Cart Bank: -->
             <div id="accordion" class="ui-widget-header toplevel-bank"></div>
