--- a/web/index.html
+++ b/web/index.html
@@ -51,21 +51,13 @@
       <div class="row">
 
         <!-- OPTIONS CONTAINER -->
-        <div class="col-lg-12"  id="optContainer">
+        <div class="col-sm-12"  id="optContainer">
           <!-- OPTIONS BODY -->
           <div class="row" id="optBody">
-            <div class="col-sm-12">
-              <span id="mainSpeedText">0.00x</span>
+            <div id="mainSpeedText">0.00x</div>
+            <div id="slider-cont">
               <div id="mainSpeedSlider"></div>
             </div>
-            <!-- <div class="" id="mainBottomPanel"></div> -->
-            <!-- <div class="col-sm-12">
-                 <div class="row">
-                 <label class="btn btn-info btn-file">
-                 Pick ROM (debug)<input id="inBut" type="file" style="display: none;">
-                 </label>
-                 </div>
-                 </div> -->
           </div> <!-- /OPTIONS BODY -->
         </div> <!-- /OPTIONS CONTAINER -->
 
@@ -82,11 +74,17 @@
             <label class="btn btn-info" id="label-extractrambut" style="visibility: hidden;">
               extract RAM<input id="extractrambut" style="display: none;">
             </label>
-            <div id="gb-slot" class="ui-widget-header toplevel-bank"></div>
+            <div id="gb-slot" class="ui-widget-header toplevel-bank">
+              <div id="label-gbsocket-empty" style="display: none;">Drop a cartridge here !</div>
+            </div>
             <!-- Cart Bank: -->
-            <div id="accordion" class="ui-widget-header toplevel-bank"></div>
+            <div id="accordion" class="ui-widget-header toplevel-bank">
+              <div id="label-no-cart">No rom loaded, drop files here</br>(.gb, .gbc)</div>
+            </div>
             <!-- Detached Chip Bank: -->
-            <div id="detached-chip-bank" class="ui-widget-header toplevel-bank"></div>
+            <div id="detached-chip-bank" class="ui-widget-header toplevel-bank">
+              <div id="label-no-chip">No save loaded, drop files here</br>(.save, .ss)</div>
+            </div>
             <!-- Volcano: -->
             <!-- Soon... -->
           </div><!-- /cartsBody -->
@@ -109,11 +107,11 @@
 
 
         <!-- DEBUGGER CONTAINER-->
-        <div class="col-lg-12"  id="debContainer">
+        <div class="col-sm-12"  id="debContainer">
           <!-- DEBUGGER BODY -->
           <div class="row" id="debBody">
 
-            <div class="col-lg-12" id="debColClock"></div>
+            <div class="col-sm-12" id="debColClock"></div>
             <div class="col-sm-12" id="debColButtons">
               <button type="button" class="btn btn-success debStatusButton" style="display: none">Resume</button>
               <button type="button" class="btn btn-warning debStatusButton">Pause</button>
