--- a/web/debugger/mem_explorer.html
+++ b/web/debugger/mem_explorer.html
@@ -7,10 +7,10 @@
       <button type="button" class="btn btn-success debJumpMem" id="memExpJumpPREV">Prev</button>
     </div>
     <div class="col-sm-8">
-      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpBGDATA0">BG Data 0</button>
-      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpBGDATA1">BG Data 1</button>
-      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpBGMAP0">BG Map 0</button>
-      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpGBMAP1">BG Map 1</button>
+      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpBGDATA0">Tile Data #1</button>
+      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpBGDATA1">Tile Data #0</button>
+      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpBGMAP0">Tile Map #0</button>
+      <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpGBMAP1">Tile Map #1</button>
       <button type="button" class="btn btn-warning debJumpMem" id="memExpJumpOAM">OAM</button>
     </div>
     <div class="col-sm-2">
