--- a/web/index.html
+++ b/web/index.html
@@ -51,22 +51,24 @@
       <div class="row">
 
         <!-- OPTIONS CONTAINER -->
-        <div class="col-sm-12"  id="optContainer">
+        <div class="col-lg-12"  id="optContainer">
           <!-- OPTIONS BODY -->
-          <div class="row" id="optBody">
-            <div class="col-sm-12">
+          <div class="row" class="optBody">
+            <div class="col-xs-12">
               <div id="mainSpeedText" class="slider-text">0.00x</div>
               <div id="speed-slider-cont" class="slider-cont">
                 <div id="mainSpeedSlider"></div>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
+          </div>
+          <div class="row" class="optBody">
+            <div class="col-sm-6">
               <div class="slider-text canvas-scale-part">2.00x</div>
               <div class="slider-cont canvas-scale-part">
                 <div class="slider"></div>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+            <div class="col-sm-4">
               <div class="slider-text canvas-smooth-part">Off</div>
               <div class="slider-cont canvas-smooth-part">
                 <div class="slider"></div>
