--- a/web/index.html
+++ b/web/index.html
@@ -53,22 +53,20 @@
         <!-- OPTIONS CONTAINER -->
         <div class="col-lg-12"  id="optContainer">
           <!-- OPTIONS BODY -->
-          <div class="row" class="optBody">
+          <div class="row" id="optBody">
             <div class="col-xs-12">
               <div id="mainSpeedText" class="slider-text">0.00x</div>
               <div id="speed-slider-cont" class="slider-cont">
                 <div id="mainSpeedSlider"></div>
               </div>
             </div>
-          </div>
-          <div class="row" class="optBody">
             <div class="col-sm-6">
               <div class="slider-text canvas-scale-part">2.00x</div>
               <div class="slider-cont canvas-scale-part">
                 <div class="slider"></div>
               </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
               <div class="slider-text canvas-smooth-part">Off</div>
               <div class="slider-cont canvas-smooth-part">
                 <div class="slider"></div>
