--- a/web/index.html
+++ b/web/index.html
@@ -46,39 +46,59 @@
     </nav>
 
     <!-- MAIN CONTAINER -->
-    <div class="container-fluid">
+    <div id="container-main" class="container-fluid">
       <!-- MAIN SPACE -->
-      <div class="row">
+      <!-- <div class="row"> -->
 
-        <!-- OPTIONS CONTAINER -->
-        <div class="col-lg-12"  id="optContainer">
-          <!-- OPTIONS BODY -->
-          <div class="row" id="optBody">
-            <div class="col-xs-12">
-              <div id="mainSpeedText" class="slider-text">0.00x</div>
-              <div id="speed-slider-cont" class="slider-cont">
-                <div id="mainSpeedSlider"></div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="slider-text canvas-scale-part">2.00x</div>
-              <div class="slider-cont canvas-scale-part">
-                <div class="slider"></div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="slider-text canvas-smooth-part">Off</div>
-              <div class="slider-cont canvas-smooth-part">
-                <div class="slider"></div>
-              </div>
-            </div>
-          </div> <!-- /OPTIONS BODY -->
-        </div> <!-- /OPTIONS CONTAINER -->
+      <!-- OPTIONS -->
 
-        <!-- cartsContainer-->
-        <div class="panel-group col-md-4 col-lg-3" id="cartsContainer">
-          <!-- cartsBody -->
-          <div id="cartsBody">
+      <!-- <div id="optContainer"> -->
+      <div class="row closable" id="row-option">
+        <div class="col-xs-12">
+          <div id="mainSpeedText" class="slider-text">0.00x</div>
+          <div id="speed-slider-cont" class="slider-cont">
+            <div id="mainSpeedSlider"></div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="slider-text canvas-scale-part">2.00x</div>
+          <div class="slider-cont canvas-scale-part">
+            <div class="slider"></div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="slider-text canvas-smooth-part">Off</div>
+          <div class="slider-cont canvas-smooth-part">
+            <div class="slider"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- </div> -->
+      <!-- /OPTIONS -->
+
+      <div class="row" id="row-alert">
+        <div class="col-sm-offset-2 col-sm-8" id="mainAlertBox"></div>
+      </div>
+
+      <!-- <div class="col-lg-12" id="canvasContainer"> -->
+      <div class="row" id="row-canvas">
+        <div class="col-sm-12 text-xs-center">
+          <div><canvas id="gameboyScreen"/></div>
+        </div>
+      </div>
+      <!-- </div> -->
+
+
+      <!-- cartsContainer-->
+      <!-- <div class="panel-group col-lg-12" id="cartsContainer"> -->
+      <!-- cartsBody -->
+      <div class="closable" id="row-cartsystem">
+        <div class="col">
+          <div id="gb-slot" class="ui-widget-header toplevel-bank">
+            <div id="label-gbsocket-empty" style="display: none;">Drop a cartridge here !</div>
+          </div>
+          <div class="button-group">
             <label class="btn btn-info" id="label-magbut" style="visibility: hidden;">
               restart<input id="magbut" style="display: none;">
             </label>
@@ -88,63 +108,52 @@
             <label class="btn btn-info" id="label-extractrambut" style="visibility: hidden;">
               extract RAM<input id="extractrambut" style="display: none;">
             </label>
-            <div id="gb-slot" class="ui-widget-header toplevel-bank">
-              <div id="label-gbsocket-empty" style="display: none;">Drop a cartridge here !</div>
-            </div>
-            <!-- Cart Bank: -->
-            <div id="accordion" class="ui-widget-header toplevel-bank">
-              <div id="label-no-cart">No rom loaded, drop files here</br>(.gb, .gbc)</div>
-            </div>
-            <!-- Detached Chip Bank: -->
-            <div id="detached-chip-bank" class="ui-widget-header toplevel-bank">
-              <div id="label-no-chip">No save loaded, drop files here</br>(.save, .ss)</div>
-            </div>
-            <!-- Volcano: -->
-            <!-- Soon... -->
-          </div><!-- /cartsBody -->
-        </div><!-- /cartsContainer -->
-
-
-        <div class="col-md-8 col-lg-9" id="canvasContainer">
-          <div class="row">
-            <div class="col-sm-12 text-xs-center">
-              <div><canvas id="gameboyScreen"/></div>
-            </div>
-            <div class="col-sm-offset-2 col-sm-8" id="mainAlertBox"></div>
           </div>
         </div>
+        <div class="col">
+          <div id="accordion" class="ui-widget-header toplevel-bank">
+            <div id="label-no-cart">No rom loaded, drop files here</br>(.gb, .gbc)</div>
+          </div>
+        </div>
+        <div class="col">
+          <div id="detached-chip-bank" class="ui-widget-header toplevel-bank">
+            <div id="label-no-chip">No save loaded, drop files here</br>(.save, .ss)</div>
+          </div>
+        </div>
+      </div>
+      <!-- </div><!-- /cartsContainer -->
+
+      <!-- DEBUGGER CONTAINER-->
+      <!-- <div class="col-sm-12"  id="debContainer"> -->
+      <!-- DEBUGGER BODY -->
+      <div class="row closable" id="row-debugger">
+
+        <div class="col-sm-12" id="debColClock"></div>
+        <div class="col-sm-12" id="debColButtons">
+          <button type="button" class="btn btn-success debStatusButton" style="display: none">Resume</button>
+          <button type="button" class="btn btn-warning debStatusButton">Pause</button>
+          <p><b>Auto-break:</b></p>
+          <form>
+            <label class="radio-inline"><input type="radio" name="optradio" value='0'>Instruction</label>
+            <label class="radio-inline"><input type="radio" name="optradio" value='1'>Frame</label>
+            <label class="radio-inline"><input type="radio" name="optradio" value='2'>Second</label>
+            <label class="radio-inline"><input type="radio" name="optradio" value='3' checked>None</label>
+          </form>
+        </div>
+
+        <div class="col-sm-8">
+          <div class="row">
+            <div class="col-sm-4" id="debColRegisters"></div>
+            <div class="col-sm-8" id="debColInstructionFlow"></div>
+          </div>
+          <div class="row" id="debColMemoryExplorer"></div>
+        </div>
+        <div class="col-sm-4" id="debColMemRegisters"></div>
+        <!-- </div><!-- /#debBody -->
+      </div><!-- /#debContainer -->
 
 
-        <!-- DEBUGGER CONTAINER-->
-        <div class="col-sm-12"  id="debContainer">
-          <!-- DEBUGGER BODY -->
-          <div class="row" id="debBody">
-
-            <div class="col-sm-12" id="debColClock"></div>
-            <div class="col-sm-12" id="debColButtons">
-              <button type="button" class="btn btn-success debStatusButton" style="display: none">Resume</button>
-              <button type="button" class="btn btn-warning debStatusButton">Pause</button>
-              <p><b>Auto-break:</b></p>
-              <form>
-                <label class="radio-inline"><input type="radio" name="optradio" value='0'>Instruction</label>
-                <label class="radio-inline"><input type="radio" name="optradio" value='1'>Frame</label>
-                <label class="radio-inline"><input type="radio" name="optradio" value='2'>Second</label>
-                <label class="radio-inline"><input type="radio" name="optradio" value='3' checked>None</label>
-              </form>
-            </div>
-
-            <div class="col-sm-8">
-              <div class="row">
-                <div class="col-sm-4" id="debColRegisters"></div>
-                <div class="col-sm-8" id="debColInstructionFlow"></div>
-              </div>
-              <div class="row" id="debColMemoryExplorer"></div>
-            </div>
-            <div class="col-sm-4" id="debColMemRegisters"></div>
-          </div><!-- /#debBody -->
-        </div><!-- /#debContainer -->
-
-      </div><!-- /MAIN SPACE -->
+      <!-- </div><!-- /MAIN SPACE -->
     </div><!-- /MAIN CONTAINER -->
     <!-- FOOTER -->
     <footer class="footer">
