--- a/web/index.html
+++ b/web/index.html
@@ -7,16 +7,13 @@
     <meta name="author" content="">
     <link rel="icon" href="./favicon.ico">
     <title>GBmu</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.1.3/css/bootstrap-slider.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
-
   <body>
-    <!-- NAVIGATION BAR -->
 
+    <!-- NAV -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -44,15 +41,12 @@
         </div>
       </div>
     </nav>
+    <!-- /NAV -->
 
-    <!-- MAIN CONTAINER -->
+    <!-- CONTAINER MAIN -->
     <div id="container-main" class="container-fluid">
-      <!-- MAIN SPACE -->
-      <!-- <div class="row"> -->
 
-      <!-- OPTIONS -->
-
-      <!-- <div id="optContainer"> -->
+      <!-- OPTION -->
       <div class="row closable" id="row-option">
         <div class="col-xs-12">
           <div id="mainSpeedText" class="slider-text">0.00x</div>
@@ -73,26 +67,23 @@
           </div>
         </div>
       </div>
+      <!-- /OPTION -->
 
-      <!-- </div> -->
-      <!-- /OPTIONS -->
-
+      <!-- ALERT -->
       <div class="row" id="row-alert">
         <div class="col-sm-offset-2 col-sm-8" id="mainAlertBox"></div>
       </div>
+      <!-- /ALERT -->
 
-      <!-- <div class="col-lg-12" id="canvasContainer"> -->
+      <!-- CANVAS -->
       <div class="row" id="row-canvas">
         <div class="col-sm-12 text-xs-center">
           <div><canvas id="gameboyScreen"/></div>
         </div>
       </div>
-      <!-- </div> -->
+      <!-- /CANVAS -->
 
-
-      <!-- cartsContainer-->
-      <!-- <div class="panel-group col-lg-12" id="cartsContainer"> -->
-      <!-- cartsBody -->
+      <!-- CART SYSTEM -->
       <div class="closable" id="row-cartsystem">
         <div class="col">
           <div id="gb-slot" class="ui-widget-header toplevel-bank">
@@ -121,11 +112,9 @@
           </div>
         </div>
       </div>
-      <!-- </div><!-- /cartsContainer -->
+      <!-- /CART SYSTEM -->
 
-      <!-- DEBUGGER CONTAINER-->
-      <!-- <div class="col-sm-12"  id="debContainer"> -->
-      <!-- DEBUGGER BODY -->
+      <!-- DEBUGGER -->
       <div class="row closable" id="row-debugger">
 
         <div class="col-sm-12" id="debColClock"></div>
@@ -149,12 +138,12 @@
           <div class="row" id="debColMemoryExplorer"></div>
         </div>
         <div class="col-sm-4" id="debColMemRegisters"></div>
-        <!-- </div><!-- /#debBody -->
-      </div><!-- /#debContainer -->
+      </div>
+      <!-- /DEBUGGER -->
 
+    </div>
+    <!-- /CONTAINER MAIN -->
 
-      <!-- </div><!-- /MAIN SPACE -->
-    </div><!-- /MAIN CONTAINER -->
     <!-- FOOTER -->
     <footer class="footer">
       <small class="pull-left col-sm-2">
@@ -166,9 +155,10 @@
       <small class="pull-right col-sm-1">
         <a href="https://github.com/jsaglio42/GBmu">github</a>
       </small>
-    </footer><!-- /FOOTER -->
+    </footer>
+    <!-- /FOOTER -->
 
-    <!-- Js Placed at the end of the document so the pages load faster -->
+    <!-- SCRIPT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.1.3/bootstrap-slider.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
@@ -186,5 +176,7 @@
 
     <script defer src="main.dart.js" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
+    <!-- /SCRIPT -->
+
   </body>
 </html>
