Add Game Boy Mode slider (close #14)

--- a/web/index.html
+++ b/web/index.html
@@ -66,6 +66,12 @@
             <div class="slider"></div>
           </div>
         </div>
+        <div class="col-sm-6">
+          <div class="slider-text gameboy-mode-part">Color Game Boy</div>
+          <div class="slider-cont gameboy-mode-part">
+            <div class="slider"></div>
+          </div>
+        </div>
       </div>
       <!-- /OPTION -->
 
