--- a/web/index.html
+++ b/web/index.html
@@ -120,7 +120,7 @@
           <!-- DEBUGGER BODY -->
           <div class="row" id="debBody">
             <div class="col-sm-12" id="debColButtons"></div>
-            <div class="col-sm-12" id="debColClock">
+            <div class="col-sm-12" id="debColClock"></div>
             <div class="col-sm-8">
               <div class="row">
                 <div class="col-sm-4" id="debColRegisters"></div>
