Added Start button (close #37)

--- a/web/debugger/buttons.html
+++ b/web/debugger/buttons.html
@@ -1,7 +1,7 @@
-<button type="button" class="btn btn-danger debStatusButton">Restart</button>
-<button type="button" class="btn btn-success debStatusButton" style="display: none">Resume</button>
-<button type="button" class="btn btn-warning debStatusButton">Pause</button>
-<button type="button" class="btn btn-info debStatusButton">Instruction</button>
-<button type="button" class="btn btn-info debStatusButton">Line</button>
-<button type="button" class="btn btn-info debStatusButton">Frame</button>
-<button type="button" class="btn btn-info debStatusButton">Second</button>
+<button id="restartDebugger" class="btn btn-danger debStatusButton">Restart</button>
+<button class="btn btn-success debStatusButton" style="display: none">Resume</button>
+<button class="btn btn-warning debStatusButton">Pause</button>
+<button class="btn btn-info debStatusButton">Instruction</button>
+<button class="btn btn-info debStatusButton">Line</button>
+<button class="btn btn-info debStatusButton">Frame</button>
+<button class="btn btn-info debStatusButton">Second</button>
