Add cpur special flags to debugger

--- a/web/debugger/registers.html
+++ b/web/debugger/registers.html
@@ -10,10 +10,13 @@
   </thead>
   <tbody>
     <tr><td colspan="2">
-      <span class="label label-default">fl</span>
-      <span class="label label-default">fl</span>
-      <span class="label label-default">fl</span>
-      <span class="label label-default">fl</span>
+      <span class="label label-default cpur-flag">fl</span>
+      <span class="label label-default cpur-flag">fl</span>
+      <span class="label label-default cpur-flag">fl</span>
+      <span class="label label-default cpur-flag">fl</span>
+      <span class="label label-default cpur-spe-flag">fl</span>
+      <span class="label label-default cpur-spe-flag">fl</span>
+      <span class="label label-default cpur-spe-flag">fl</span>
     </td></tr>
     <tr><td>reg0</td><td>0000</td></tr>
     <tr><td>reg1</td><td>0000</td></tr>
