--- a/web/index.html
+++ b/web/index.html
@@ -72,6 +72,12 @@
             <div class="slider"></div>
           </div>
         </div>
+        <div class="col-sm-6">
+          <div class="slider-text gameboy-fps-part">Off</div>
+          <div class="slider-cont gameboy-fps-part">
+            <div class="slider"></div>
+          </div>
+        </div>
       </div>
       <!-- /OPTION -->
 
