Add Key mappin html panel

--- a/web/index.html
+++ b/web/index.html
@@ -83,7 +83,9 @@
 
       <!-- KEY_MAPPING -->
       <div class="row closable" style="display: none;" id="row-key-mapping">
-        key mapping!
+        <div class="col-sm-6">
+          gamekey mapping
+        </div>
       </div>
       <!-- /KEY_MAPPING -->
 
