Add `joypad_key.dart` `key.dart`

--- a/web/index.html
+++ b/web/index.html
@@ -84,7 +84,22 @@
       <!-- KEY_MAPPING -->
       <div class="row closable" style="display: none;" id="row-key-mapping">
         <div class="col-sm-6">
-          gamekey mapping
+          <table class="table table-bordered table-striped table-condensed">
+            <caption>
+              <h4>Joypad</h4>
+            </caption>
+            <thead>
+              <tr>
+                <th style='text-align: center'>Joypad</th>
+                <th style='text-align: center'>Press-Release</th>
+                <th style='text-align: center'>Tap</th>
+                <th style='text-align: center'>Spam toggle</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+
         </div>
       </div>
       <!-- /KEY_MAPPING -->
