--- a/web/index.html
+++ b/web/index.html
@@ -84,7 +84,7 @@
       <!-- KEY_MAPPING -->
       <div class="row closable" style="display: none;" id="row-key-mapping">
         <div class="col-sm-6">
-          <table class="table table-bordered table-striped table-condensed">
+          <table class="table table-bordered table-striped table-condensed" id="joypad-table">
             <caption>
               <h4>Joypad</h4>
             </caption>
