Add labels above canvas to show key spam

--- a/web/index.html
+++ b/web/index.html
@@ -113,7 +113,17 @@
       <!-- CANVAS -->
       <div class="row" id="row-canvas">
         <div class="col-sm-12 text-xs-center">
-          <div><canvas id="gameboyScreen"/></div>
+          <div id="spamming-label-container">
+            <span class="label label-success" style="display: none;">right</span>
+            <span class="label label-success" style="display: none;">left</span>
+            <span class="label label-success" style="display: none;">up</span>
+            <span class="label label-success" style="display: none;">down</span>
+            <span class="label label-success" style="display: none;">A</span>
+            <span class="label label-success" style="display: none;">B</span>
+            <span class="label label-success" style="display: none;">select</span>
+            <span class="label label-success" style="display: none;">start</span>
+          </div>
+          <canvas id="gameboyScreen"/>
         </div>
       </div>
       <!-- /CANVAS -->
