Add Save states mapping

--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,21 @@
             <tbody>
             </tbody>
           </table>
-
+        </div>
+        <div class="col-sm-6">
+          <table class="table table-bordered table-striped table-condensed" id="ss-table">
+            <caption>
+              <h4>Save states</h4>
+            </caption>
+            <thead>
+              <tr>
+                <th style='text-align: center'>Action</th>
+                <th style='text-align: center'>Shortcut</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         </div>
       </div>
       <!-- /KEY_MAPPING -->
