Add control buttons while mapping key (close #15)

--- a/web/index.html
+++ b/web/index.html
@@ -83,6 +83,11 @@
 
       <!-- KEY_MAPPING -->
       <div class="row closable" style="display: none;" id="row-key-mapping">
+        <div class="col-sm-12" id="mapping-button-container">
+          <button type="button" class="ft-cancel btn btn-warning" style="visibility: hidden;">Cancel</button>
+          <button type="button" class="ft-default btn btn-primary" style="visibility: hidden;">Default</button>
+          <button type="button" class="ft-remove btn btn-danger" style="visibility: hidden;">Remove</button>
+        </div>
         <div class="col-sm-6">
           <table class="table table-bordered table-striped table-condensed" id="joypad-table">
             <caption>
