Improve debugger responsiveness

--- a/web/debugger/buttons.html
+++ b/web/debugger/buttons.html
@@ -1,7 +1,11 @@
-<button id="restartDebugger" class="btn btn-danger debStatusButton">Restart</button>
-<button class="btn btn-success debStatusButton" style="display: none">Resume</button>
-<button class="btn btn-warning debStatusButton">Pause</button>
-<button class="btn btn-info debStatusButton">Instruction</button>
-<button class="btn btn-info debStatusButton">Line</button>
-<button class="btn btn-info debStatusButton">Frame</button>
-<button class="btn btn-info debStatusButton">Second</button>
+<div>
+  <button id="restartDebugger" class="btn btn-danger debStatusButton">Restart</button>
+  <button class="btn btn-success debStatusButton ft-resume" style="display: none">Resume</button>
+  <button class="btn btn-warning debStatusButton ft-pause">Pause</button>
+  <button class="btn btn-info debStatusButton ft-limited-emu">Instruction</button>
+</div>
+<div>
+  <button class="btn btn-info debStatusButton ft-limited-emu">Line</button>
+  <button class="btn btn-info debStatusButton ft-limited-emu">Frame</button>
+  <button class="btn btn-info debStatusButton ft-limited-emu">Second</button>
+</div>
