--- a/web/debugger/mem_explorer.html
+++ b/web/debugger/mem_explorer.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12">
+<!-- <div class="col-sm-12"> -->
   <h4 align="left">Memory explorer</h4>
   <input type="text" placeholder="Memory Address: 0000 ... FFFF" class="form-control" id="memory-addr-input">
 
@@ -115,4 +115,4 @@
     </tbody>
   </table>
 
-</div>
+  <!-- </div> -->
