--- a/web/index.html
+++ b/web/index.html
@@ -186,10 +186,10 @@
 
         <div class="col-sm-8">
           <div class="row">
-            <div class="col-sm-4" id="debColRegisters"></div>
-            <div class="col-sm-8" id="debColInstructionFlow"></div>
+            <div class="col-xs-4" id="debColRegisters"></div>
+            <div class="col-xs-8" id="debColInstructionFlow"></div>
+            <div class="col-sm-12" id="debColMemoryExplorer"></div>
           </div>
-          <div class="row" id="debColMemoryExplorer"></div>
         </div>
         <div class="col-sm-4" id="debColMemRegisters"></div>
       </div>
