--- a/web/debugger/mem_registers.html
+++ b/web/debugger/mem_registers.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-sm-12">
+  <div class="col-xs-12">
     <h4>Memory Registers</h4>
   </div>
-  <div class="col-sm-6">
+  <div class="col-xs-6">
     <table class="table table-bordered table-striped table-condensed">
      <thead>
         <tr>
@@ -82,7 +82,7 @@
       </tbody>
     </table>
   </div>
-  <div class="col-sm-6">
+  <div class="col-xs-6">
     <table class="table table-bordered table-striped table-condensed">
       <thead>
         <tr>
